<resources>
    <string name="app_name">Adsle</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signup">Register</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum of 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Pin</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Pin</string>
    <string name="title_activity_profile">My Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Pin</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Address to send you password reset instructions.</string>
    <string name="payment_msg">Please note, your card information is not stored with us and also, you will be charged ₦1 for card verification.</string>
    <string name="recharge_msg">Please note, your card information is not stored with us.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_plan">Choose a data plan</string>
    <string name="invitation_title">Genie Invites</string>
    <string name="invitation_message">Share with friends.</string>
    <string name="invitation_cta">SHARE</string>
    <string name="invitation_deep_link">https://mh4u7.app.goo.gl</string>
    <string name="invitation_custom_image">https://www.gstatic.com/mobilesdk/160413_mobilesdk/zero_states/dynamiclinks_2x.png</string>
    <string name="facebook_app_id">816960761732212</string>
    <string name="fb_login_protocol_scheme">fb816960761732212</string>
    <string name="web_client_id">101281227104742627050</string>
    <string name="digitText">Enter the 6-digit code sent to you at</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="select_contact"><u>Select contact</u></string>

    <string name="google_place_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDMwSxTrzgf3OBB8WFXjaFKn7as-GKByoU
    </string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="cam_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>

    <string-array name="religion">
        <item>Christianity</item>
        <item>Islam</item>
    </string-array>

    <string-array name="cam_religion">
        <item>Christianity</item>
        <item>Islam</item>
        <item>Both</item>
    </string-array>
    <string-array name="cam_link_options">
        <item>App Install</item>
        <!--<item>Action Call</item>-->
        <!--<item>Action Email</item>-->
        <item>Click</item>
        <item>Reach</item>
    </string-array>

    <string name="appwidget_text">ADSLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_interest">Select Your Interests</string>
    <string name="title_activity_invite">Invite Friends</string>
    <string name="title_activity_topup">Adsle Topup</string>
    <string name="view_cam"><u>View Campaign</u></string>
    <string name="title_activity_create_campaign">Create New Campaign</string>
    <string name="title_activity_payment">Make Payment</string>
    <string name="title_activity_transaction">Campaign Transactions</string>
    <string name="terms"><u>By registering, you have agreed to our Terms and Conditions</u></string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_campaign_list">My Campaigns</string>
    <string name="title_activity_works">How It Works</string>
</resources>
