<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:id="@+id/selection_one"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="50"
                    android:background="@color/fabColor"
                    android:text="USER"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/selection_two"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="50"
                    android:background="@color/colorAccent"
                    android:text="ADVERTISER"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="Full Name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:hint="Full Name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:text="Email Address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:text="Phone Number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="Date of Birth"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/editbg"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="start"
                android:hint="01-12-1990"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="Gender"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:entries="@array/gender"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvReligion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="Religion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:entries="@array/religion"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:text="Password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvReferral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:text="Referral Code (optional)"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/refCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbg"
                android:hint="Referral Code"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/referCoder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/termsCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I accept Terms and Conditions" />

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <!--<Button-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="0dp"-->
            <!--android:background="@null"-->
            <!--android:onClick="LoadDialog"-->
            <!--android:text="Or connect with social"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent" />-->

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>